--- a/nbs/10_viz.ipynb
+++ b/nbs/10_viz.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,8 @@
     "                                xlabel_str:str=None, # x-label string\n",
     "                                ylabel_str:str=None, # y-label string\n",
     "                                param_name_str:str=None, # Parameter string,\n",
-    "                                ax: plt.Axes = None\n",
+    "                                ax: plt.Axes = None,\n",
+    "                                y_log_scale:bool=False\n",
     "                               ):\n",
     "    \n",
     "    \n",
@@ -91,7 +92,7 @@
     "\n",
     "    # plt.plot(stellar_mass_test, gsmf_um_test, 'k.', label='UM z=0.00')\n",
     "    ax.set_xscale('log')\n",
-    "    ax.set_yscale('log')\n",
+    "    if y_log_scale: ax.set_yscale('log')\n",
     "    # plt.axhline(y=0, linestyle='dashed', color='black')\n",
     "    # plt.yscale('log')\n",
     "    # plt.xlim(4e9, )\n",
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,8 @@
     "                     sepia_model:SepiaModel=None, # SEPIA emulator model\n",
     "                     emulator_function=None, # function which takes in sepia model and parameters\n",
     "                     param_name:tuple=None, # Parameter name\n",
-    "                     xy_lims:np.array=[1e-5, 2e5, 1, 1e4] \n",
+    "                     xy_lims:np.array=[1e-5, 2e5, 1, 1e4],\n",
+    "                     y_log_scale=False \n",
     "                    ):\n",
     "\n",
     "    color_by_index = 0\n",
@@ -218,7 +220,7 @@
     "\n",
     "                    # ax[paramNo].set_yscale('log')\n",
     "                    ax[paramNo].set_xscale('log')\n",
-    "                    ax[paramNo].set_yscale('log')\n",
+    "                    if y_log_scale: ax[paramNo].set_yscale('log')\n",
     "                    ax[paramNo].set_ylabel('P(k)', fontsize=18)\n",
     "                    ax[paramNo].set_yticks([], minor = True)\n",
     "                    \n",
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +262,8 @@
     "                    target_vals:np.array=None, \n",
     "                    pred_mean:np.array=None, \n",
     "                    pred_quant:np.array=None, \n",
-    "                    xy_lims:np.array=[2e-2, 1e1, 0.98, 1.3]\n",
+    "                    xy_lims:np.array=[2e-2, 1e1, 0.98, 1.3],\n",
+    "                    y_log_scale:bool=False\n",
     "                    ):\n",
     "    \n",
     "    delta_y_lims = [-0.101, 0.101]\n",
@@ -306,7 +309,7 @@
     "    a[1].set_ylabel(r'$\\delta P(k)/P(k)$')\n",
     "    a[0].set_ylabel(r'$P(k) [(Mpc/h)^3]$')\n",
     "    a[0].set_xscale('log')\n",
-    "    a[0].set_yscale('log')\n",
+    "    if y_log_scale: a[0].set_yscale('log')\n",
     "    # plt.show()\n",
     "    a[0].set_xlim(xy_lims[0], xy_lims[1])\n",
     "    a[0].set_ylim(xy_lims[2], xy_lims[3])\n",
@@ -317,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,11 +355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #| hide\n",
+    "#| hide\n",
     "\n",
     "# from getdist import plots, MCSamples\n",
     "# import re\n",
@@ -420,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
