--- a/nbs/10_viz.ipynb
+++ b/nbs/10_viz.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
     "                                ylabel_str:str=None, # y-label string\n",
     "                                param_name_str:str=None, # Parameter string,\n",
     "                                ax: plt.Axes = None,\n",
-    "                                y_log_scale:bool=False\n",
+    "                                y_log_plot_scale:bool=False\n",
     "                               ):\n",
     "    \n",
     "    \n",
@@ -92,7 +92,7 @@
     "\n",
     "    # plt.plot(stellar_mass_test, gsmf_um_test, 'k.', label='UM z=0.00')\n",
     "    ax.set_xscale('log')\n",
-    "    if y_log_scale: ax.set_yscale('log')\n",
+    "    if y_log_plot_scale: ax.set_yscale('log')\n",
     "    # plt.axhline(y=0, linestyle='dashed', color='black')\n",
     "    # plt.yscale('log')\n",
     "    # plt.xlim(4e9, )\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
     "                     emulator_function=None, # function which takes in sepia model and parameters\n",
     "                     param_name:tuple=None, # Parameter name\n",
     "                     xy_lims:np.array=[1e-5, 2e5, 1, 1e4],\n",
-    "                     y_log_scale=False \n",
+    "                     y_log_plot_scale:bool=False \n",
     "                    ):\n",
     "\n",
     "    color_by_index = 0\n",
@@ -220,7 +220,7 @@
     "\n",
     "                    # ax[paramNo].set_yscale('log')\n",
     "                    ax[paramNo].set_xscale('log')\n",
-    "                    if y_log_scale: ax[paramNo].set_yscale('log')\n",
+    "                    if y_log_plot_scale: ax[paramNo].set_yscale('log')\n",
     "                    ax[paramNo].set_ylabel('P(k)', fontsize=18)\n",
     "                    ax[paramNo].set_yticks([], minor = True)\n",
     "                    \n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
     "                    pred_mean:np.array=None, \n",
     "                    pred_quant:np.array=None, \n",
     "                    xy_lims:np.array=[2e-2, 1e1, 0.98, 1.3],\n",
-    "                    y_log_scale:bool=False\n",
+    "                    y_log_plot_scale:bool=False\n",
     "                    ):\n",
     "    \n",
     "    delta_y_lims = [-0.101, 0.101]\n",
@@ -283,7 +283,7 @@
     "        a[0].plot(k_all, pred_mean[:, one_index], c=colors[one_index], ls=styles[1])\n",
     "        # a[0].plot(k_all, pred_quant[:, one_index, 0], c=colors[one_index], ls=styles[2])\n",
     "\n",
-    "        # a[0].fill_between(k_all, pred_quant[:, one_index, 0], pred_quant[:, one_index, 1], color=colors[one_index], alpha=0.2) \n",
+    "        a[0].fill_between(k_all, pred_quant[:, one_index, 0], pred_quant[:, one_index, 1], color=colors[one_index], alpha=0.2) \n",
     "        #'Emulated (0.05, 0.95) quantile'\n",
     "\n",
     "\n",
@@ -309,7 +309,7 @@
     "    a[1].set_ylabel(r'$\\delta P(k)/P(k)$')\n",
     "    a[0].set_ylabel(r'$P(k) [(Mpc/h)^3]$')\n",
     "    a[0].set_xscale('log')\n",
-    "    if y_log_scale: a[0].set_yscale('log')\n",
+    "    if y_log_plot_scale: a[0].set_yscale('log')\n",
     "    # plt.show()\n",
     "    a[0].set_xlim(xy_lims[0], xy_lims[1])\n",
     "    a[0].set_ylim(xy_lims[2], xy_lims[3])\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
