--- a/nbs/00_load.ipynb
+++ b/nbs/00_load.ipynb
@@ -163,7 +163,7 @@
     "        all_data[sim_num - 1, :, :] = np.array(sim_data)  # Adjusted index to be 0-based\n",
     "\n",
     "    # np.save(output_directory + 'pk_all', all_data, allow_pickle=True)\n",
-    "    all_data = np.ravel(all_data)\n",
+    "    # all_data = np.ravel(all_data)\n",
     "    \n",
     "    np.save(output_directory + 'pk_all.npy', all_data)\n",
     "    np.save(output_directory + 'k_all.npy', k_base)\n",
@@ -231,7 +231,7 @@
     "    k_all = np.load(k_fileIn)\n",
     "    z_all = np.load(z_fileIn)\n",
     "\n",
-    "    Pk_all = np.reshape(Pk_all, newshape=(-1, z_all.shape[0], k_all.shape[0]))\n",
+    "    # Pk_all = np.reshape(Pk_all, newshape=(-1, z_all.shape[0], k_all.shape[0]))\n",
     "    \n",
     "    if pk_log_scale: \n",
     "        Pk_all = np.log10(Pk_all)        \n",
@@ -255,9 +255,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((64, 51, 210), (210,), (51,))"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Pk_all.shape, k_all.shape, z_all.shape"
+    "Pk_all.shape, k_all.shape, z_all.shape"
    ]
   },
   {
