--- a/nbs/03_emu.ipynb
+++ b/nbs/03_emu.ipynb
@@ -32,7 +32,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(210,)\n"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "\n",
@@ -59,12 +67,24 @@
     "#| export\n",
     "\n",
     "def blockPrint():\n",
-    "    sys._jupyter_stdout = sys.stdout\n",
-    "    sys.stdout = open(os.devnull, 'w')\n",
+    "    if 'ipykernel' in sys.modules:\n",
+    "        # Running in Jupyter notebook\n",
+    "        sys._jupyter_stdout = sys.stdout\n",
+    "        sys.stdout = open(os.devnull, 'w')\n",
+    "    else:\n",
+    "        # Running in a regular Python script\n",
+    "        sys._original_stdout = sys.stdout\n",
+    "        sys.stdout = open(os.devnull, 'w')\n",
     "\n",
     "def enablePrint():\n",
-    "    sys._jupyter_stdout = sys.stdout\n",
-    "    sys.stdout = sys.__stdout__"
+    "    if 'ipykernel' in sys.modules:\n",
+    "        # Running in Jupyter notebook\n",
+    "        sys.stdout.close()\n",
+    "        sys.stdout = sys._jupyter_stdout\n",
+    "    else:\n",
+    "        # Running in a regular Python script\n",
+    "        sys.stdout.close()\n",
+    "        sys.stdout = sys._original_stdout"
    ]
   },
   {
