--- a/nbs/10_viz.ipynb
+++ b/nbs/10_viz.ipynb
@@ -271,7 +271,7 @@
     "    f, a = plt.subplots(2, 1, figsize=(8, 6), gridspec_kw={'height_ratios': [2, 1]}, sharex=True)\n",
     "    plt.subplots_adjust(left=None, bottom=None, right=None, top=None, wspace=None, hspace=0.05)\n",
     "\n",
-    "    colors = ['b', 'r', 'g', 'y', 'cyan', 'magenta']\n",
+    "    colors = ['b', 'lightgreen', 'g', 'orange', 'cyan', 'r']\n",
     "    colors = colors[0: pred_mean.shape[1]]\n",
     "    styles = ['-', '--']\n",
     "    styles_label = ['Sim', 'Emulated mean']\n",
@@ -290,7 +290,7 @@
     "        a[1].plot(k_all, (pred_mean[:, one_index]/target_vals[one_index]) - 1, c=colors[one_index])\n",
     "\n",
     "    for cc, col in enumerate(colors):\n",
-    "        a[0].plot(np.NaN, np.NaN, c=colors[cc], label='Cosmology: ' + str(cc))\n",
+    "        a[0].plot(np.NaN, np.NaN, c=colors[cc], label='T' + str(cc + 1))\n",
     "\n",
     "    ax2 = a[0].twinx()\n",
     "    for ss, sty in enumerate(styles):\n",
@@ -303,7 +303,7 @@
     "    # a[1].fill_between(k_all, delta_y_lims[0], delta_y_lims[1], where=(k_all > 1.2), color='k', alpha=0.15)\n",
     "\n",
     "\n",
-    "    a[0].legend(loc=1, title='Test configuration')\n",
+    "    a[0].legend(loc=2, title='Test cosmologies', ncol=2)\n",
     "    ax2.legend(loc=3)\n",
     "    a[1].set_xlabel('k[h/Mpc]')\n",
     "    a[1].set_ylabel(r'$\\delta P(k)/P(k)$')\n",
