--- a/nbs/10_viz.ipynb
+++ b/nbs/10_viz.ipynb
@@ -86,7 +86,7 @@
     "    cmap.set_array([])\n",
     "\n",
     "    for sim_index in range(param_array.shape[0]):\n",
-    "        ax.plot(x_array, y_array_all[sim_index], \n",
+    "        ax.plot(x_array, y_array_all[sim_index]/y_array_all[0], \n",
     "                 '-', alpha= 0.5, c=cmap.to_rgba(param_array[sim_index]), \n",
     "                 label='Sim: '+str(sim_index) )\n",
     "\n",
