--- a/nbs/03_emu.ipynb
+++ b/nbs/03_emu.ipynb
@@ -113,7 +113,8 @@
     "    pred_samps = pred.get_y()\n",
     "    \n",
     "    pred_mean = np.mean(pred_samps, axis=0).T\n",
-    "    pred_err = np.quantile(pred_samps, [0.05, 0.95], axis=0).T\n",
+    "    # pred_quant = np.quantile(pred_samps, [0.05, 0.95], axis=0).T\n",
+    "    pred_err = np.std(pred_samps, axis=0).T\n",
     "    \n",
     "    return pred_mean, pred_err"
    ]
