--- a/nbs/04_mcmc.ipynb
+++ b/nbs/04_mcmc.ipynb
@@ -32,7 +32,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(210,)\n"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "\n",
@@ -91,7 +99,7 @@
     "    model_grid, model_var_grid = emu_redshift(new_params, sepia_model_list, z_all)\n",
     "        \n",
     "    model = np.interp(x, x_grid, model_grid[:, 0])\n",
-    "    model_var = np.interp(x, x_grid, model_var_grid[:, 0, 0])\n",
+    "    # model_var = np.interp(x, x_grid, model_var_grid[:, 0, 0])\n",
     "  \n",
     "    # sigma2 = yerr**2  + model_var\n",
     "    sigma2 = yerr**2 \n",
