--- a/nbs/10_viz.ipynb
+++ b/nbs/10_viz.ipynb
@@ -261,7 +261,7 @@
     "def validation_plot(k_all:np.array=None, \n",
     "                    target_vals:np.array=None, \n",
     "                    pred_mean:np.array=None, \n",
-    "                    pred_quant:np.array=None, \n",
+    "                    pred_std:np.array=None, \n",
     "                    xy_lims:np.array=[2e-2, 1e1, 0.98, 1.3],\n",
     "                    y_log_plot_scale:bool=False\n",
     "                    ):\n",
@@ -283,7 +283,10 @@
     "        a[0].plot(k_all, pred_mean[:, one_index], c=colors[one_index], ls=styles[1])\n",
     "        # a[0].plot(k_all, pred_quant[:, one_index, 0], c=colors[one_index], ls=styles[2])\n",
     "\n",
-    "        a[0].fill_between(k_all, pred_quant[:, one_index, 0], pred_quant[:, one_index, 1], color=colors[one_index], alpha=0.2) \n",
+    "        # a[0].fill_between(k_all, pred_quant[:, one_index, 0], pred_quant[:, one_index, 1], color=colors[one_index], alpha=0.2) \n",
+    "        a[0].fill_between(k_all, pred_mean[:, one_index] - pred_std[:, one_index], pred_mean[:, one_index] + pred_std[:, one_index], \n",
+    "                          color=colors[one_index], alpha=0.2) \n",
+    "\n",
     "        #'Emulated (0.05, 0.95) quantile'\n",
     "\n",
     "\n",
