--- a/nbs/04_mcmc.ipynb
+++ b/nbs/04_mcmc.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,12 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\ndef ln_like(theta, \\n            redshift,\\n            x_grid, \\n            sepia_model_list, \\n            z_all, \\n            x, \\n            y, \\n            yerr\\n            ):\\n      \\n#     p1, p2, p3, p4, p5 = theta\\n#     new_params = np.array([p1, p2, p3, p4, p5, redshift])[np.newaxis, :]\\n\\n#     new_params = np.array(theta + [redshift])[np.newaxis, :]\\n    omega_m, h, sigma_8 = theta\\n    log_zc = 3\\n    f_ede = 0\\n    theta_i = 0\\n    new_params = np.append(np.array([omega_m, h, sigma_8, log_zc, f_ede, theta_i]), [redshift])[np.newaxis, :]\\n\\n#    print('Theta', len(theta))\\n#    print('New params', new_params.shape)\\n        \\n    model_grid, model_var_grid = emu_redshift(new_params, sepia_model_list, z_all)\\n        \\n    model = np.interp(x, x_grid, model_grid[:, 0])\\n    # model_var = np.interp(x, x_grid, model_var_grid[:, 0, 0])\\n  \\n    # sigma2 = yerr**2  + model_var\\n    sigma2 = yerr**2 \\n\\n    ll = -0.5 * np.sum((y - model)** 2 / sigma2 )\\n    \\n    return ll\\n\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#| export\n",
-    "\n",
     "def ln_like(theta, \n",
     "            redshift,\n",
     "            x_grid, \n",
@@ -91,10 +101,12 @@
     "#     new_params = np.array([p1, p2, p3, p4, p5, redshift])[np.newaxis, :]\n",
     "\n",
     "#     new_params = np.array(theta + [redshift])[np.newaxis, :]\n",
+    "\n",
+    "    \n",
     "    new_params = np.append( np.array(theta), [redshift] )[np.newaxis, :]\n",
     "\n",
-    "#     print('Theta', len(theta))\n",
-    "#     print('New params', new_params.shape)\n",
+    "#    print('Theta', len(theta))\n",
+    "#    print('New params', new_params.shape)\n",
     "        \n",
     "    model_grid, model_var_grid = emu_redshift(new_params, sepia_model_list, z_all)\n",
     "        \n",
@@ -106,12 +118,48 @@
     "\n",
     "    ll = -0.5 * np.sum((y - model)** 2 / sigma2 )\n",
     "    \n",
-    "    return ll\n"
+    "    return ll\n",
+    "'''\n",
+    "def ln_like(theta, \n",
+    "            redshift,\n",
+    "            x_grid, \n",
+    "            sepia_model_list, \n",
+    "            z_all, \n",
+    "            x, \n",
+    "            y, \n",
+    "            yerr\n",
+    "            ):\n",
+    "      \n",
+    "#     p1, p2, p3, p4, p5 = theta\n",
+    "#     new_params = np.array([p1, p2, p3, p4, p5, redshift])[np.newaxis, :]\n",
+    "\n",
+    "#     new_params = np.array(theta + [redshift])[np.newaxis, :]\n",
+    "    omega_m, h, sigma_8 = theta\n",
+    "    log_zc = 3\n",
+    "    f_ede = 0\n",
+    "    theta_i = 0\n",
+    "    new_params = np.append(np.array([omega_m, h, sigma_8, log_zc, f_ede, theta_i]), [redshift])[np.newaxis, :]\n",
+    "\n",
+    "#    print('Theta', len(theta))\n",
+    "#    print('New params', new_params.shape)\n",
+    "        \n",
+    "    model_grid, model_var_grid = emu_redshift(new_params, sepia_model_list, z_all)\n",
+    "        \n",
+    "    model = np.interp(x, x_grid, model_grid[:, 0])\n",
+    "    # model_var = np.interp(x, x_grid, model_var_grid[:, 0, 0])\n",
+    "  \n",
+    "    # sigma2 = yerr**2  + model_var\n",
+    "    sigma2 = yerr**2 \n",
+    "\n",
+    "    ll = -0.5 * np.sum((y - model)** 2 / sigma2 )\n",
+    "    \n",
+    "    return ll\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,20 +297,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
